# Quartz

./: .gitignore  .merlin  IDEAS.md  Quartz.cabal  README.md  _oasis  example.qrz  opam  typing.pl
examples/: basic.qrz  basic_stmt.qrz  exprs.qrz
global-synthesis/: README.md  cfsm.ml  synth.ml  type.txt
src/: Ast.hs  Emit.hs  Ident.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  Token.hs  Type.hs  Typecheck.hs  ast.ml  emit.ml  ident.ml  lexer.mll  main.ml  parser.mly  pos.ml  quartz.ml  type.ml  typecheck.ml
vm/: IDEAS.md  build.sh
vm/src/: main.cpp  qvm_instrs.cpp  qvm_instrs.h  qvm_interpreter.cpp  qvm_interpreter.h  qvm_types.cpp  qvm_types.h
