name:                Quartz
version:             0.1.0.0
synopsis:            The official compiler for the Quartz programming language
description:         The official compiler for the Quartz programming language
homepage:            http://ohad.space/proj/Quartz
license:             GPL-3
license-file:        LICENSE
author:              ohadrau
maintainer:          admin@ohad.space
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable Quartz
  main-is:             Main.hs
  default-extensions:  ConstraintKinds,
                       DataKinds,
                       DeriveFunctor,
                       DeriveGeneric,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       KindSignatures,
                       LambdaCase,
                       MonadComprehensions,
                       MultiParamTypeClasses,
                       NoMonomorphismRestriction,
                       OverloadedStrings,
                       ParallelListComp,
                       PatternSynonyms,
                       QuasiQuotes,
                       RankNTypes,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeOperators,
                       UnicodeSyntax,
                       ViewPatterns
  build-depends:       base >=4.6.0.0,
                       array >=0.4.0.0,
                       containers >= 0.5.10.0,
                       transformers >= 0.5.4.0,
                       mtl >= 2.2.0
  build-tools:         alex, happy
  other-modules:       Parser, Lexer
  hs-source-dirs:      src/
  default-language:    Haskell2010
